:lipstick: Fixed grid tiles alignment

--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@
     
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
+    justify-items: center;
+    align-items: center;
     /*  */
     margin: 24px 0;
 }
